force-app/main/default/objects/BalanceDetail__c/BalanceDetail__c.object-meta.xml
<CustomObject>
    <label>시산상세</label>
    <nameField>
        <label>Type</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>