force-app/main/default/objects/BalanceDetail__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Balance</label>
    <referenceTo>Balance__c</referenceTo>
    <relationshipLabel>BalanceDetails</relationshipLabel>
    <relationshipName>BalanceDetails</relationshipName>
    <type>Lookup</type>
</CustomField>