force-app/main/default/objects/BalanceDetail__c/fields/Column10__c.field-meta.xml
<CustomField>
    <fullName>Column10__c</fullName>
    <label>Column10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>