force-app/main/default/objects/BalanceDetail__c/fields/Column11__c.field-meta.xml
<CustomField>
    <fullName>Column11__c</fullName>
    <label>Column11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>