force-app/main/default/objects/BalanceDetail__c/fields/Column12__c.field-meta.xml
<CustomField>
    <fullName>Column12__c</fullName>
    <label>Column12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>