force-app/main/default/objects/BalanceDetail__c/fields/KeyCode__c.field-meta.xml
<CustomField>
    <fullName>KeyCode__c</fullName>
    <label>KeyCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>