force-app/main/default/objects/BalanceDetail__c/fields/MIG_KEY__c.field-meta.xml
<CustomField>
    <fullName>MIG_KEY__c</fullName>
    <label>MIG_KEY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>